--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head> <title>UNI-GETAWAY</title>
+  </head>
   <body>
      <h1> Welcome to uni-getaway</h1>
+ 
   </body>
   </html>
