--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head> 
-    <title>UNI-GETAWAY</title>
-  </head>
   <body>
      <h1> Welcome to uni-getaway</h1>
- 
+    <p> Hello and welcome to the site that brings your uni-getways to life</p>
   </body>
   </html>
