--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
      <h1> Welcome to uni-getaway</h1>
     <p> Hello and welcome to the site that brings your uni-getways to life</p>
+    <img src= 'https://www.google.co.uk/search?q=holiday+destinations&espv=2&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjtvejQjd7SAhXJC8AKHSGPATEQ_AUIBigB&biw=1517&bih=735#imgrc=PcznWoMbmKLALM:'>
   </body>
   </html>
